// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> should match is's snapshot: default 1`] = `
<div>
  <p
    class="prose text flex items-center"
  >
    Hello
  </p>
</div>
`;

exports[`<Text> should match is's snapshot: hover 1`] = `
<div>
  <p
    class="prose text hover flex items-center"
  >
    Hello
  </p>
</div>
`;

exports[`<Text> should match is's snapshot: hover inline 1`] = `
<div>
  <p
    class="prose text hover inline-flex items-center"
  >
    Hello
  </p>
</div>
`;
